<resources>
    <string name="app_name">どこでもゆかり</string>
    <string name="settings_title">Settings</string>
    <string name="story_title">Story</string>
    <string name="preset_title">Preset</string>
    <string name="play_title">Play</string>
    <string name="import_title">Import</string>
    <string name="preset_format">Rate: %s, Pitch: %s, Range: %s, Volume: %s</string>
    <string name="transition_name">transition_name</string>
    <string name="menu_details_play">Play</string>
    <string name="menu_details_star">Star</string>
    <string name="menu_details_remove">Remove</string>
    <string name="main_double_back_invoker">Please click BACK again to exit</string>
    <string name="preset_details_format">%s</string>
    <string name="saved">Saved.</string>
    <string name="main_details_title">Title</string>
    <string name="main_details_favorite_on">Favored.</string>
    <string name="main_details_favorite_off">Unfavored.</string>
    <string name="main_details_removed">Removed.</string>
    <string name="main_details_voice_add_voice">Add new Voice</string>
    <string name="main_details_voice_add_break">Add Break</string>
    <string name="main_details_voice_add_history">Add from History</string>
    <string name="main_details_voice_title">Add Voice</string>
    <string name="close">Close</string>
    <string name="play_dialog_title">Play Story</string>
    <string name="save">Save</string>
    <string name="break_time_title">Add Break</string>
    <string name="break_time_desc">Sets the blank space between sentences and sentences. (0.1s ~ 2.0s)</string>
    <string name="voice_history_desc">Select from the sentence you used previously.</string>
    <string name="voice_history_title">Add from History</string>
    <string name="voice_history_search">Search</string>
    <string name="voice_history_search_hint">Search text</string>
    <string name="break_time">Break time</string>
    <string name="menu_details_order">Order</string>
    <string name="swipe_order_title">Swipe Order</string>
    <string name="break_time_help">Inserts an <b>empty space</b> between the sentence and the sentence.\nIt can be set from 0.1 seconds to 2 seconds and is reflected in the sound source.\n0.2 seconds is usually appropriate.</string>
    <string name="select_nearest_result">Select nearest result</string>
    <string name="main_detail_record_permission">Please allow RECORD permission to use this feature.</string>
    <string name="voice_detail_limit">%s/<font color="#ff0000">100</font></string>
    <string name="voice_detail_jeita">Must be a character defined in <b>JEITA IT-4006</b> (symbol for Japanese text-to-speech synthesis).\n<b>Use only when the synthesized text is strange.</b> (For professionals)</string>
    <string name="voice_detail_write">Write Sentences</string>
    <string name="voice_select">Select voice</string>
    <string name="enter">Enter</string>
    <string name="text">Text</string>
    <string name="history">History</string>
    <string name="remove">Remove</string>
    <string name="deceptions">Deceptions</string>
    <string name="voice_detail_hint">Select Preset</string>
    <string name="menu_voice_copy">Copy</string>
    <string name="menu_voice_origin">Revert to Origin</string>
    <string name="main_detail_saved_other_path">Saved in %s</string>
    <string name="setting_1_1">Enter API Key</string>
    <string name="setting_1_2">DOCOMO API Key</string>
    <string name="setting_2_1">Third-party Assets License</string>
    <string name="setting_2_2">Open License Notice</string>
    <string name="setting_3_1">Revision History</string>
    <string name="setting_3_2">Release Log</string>
    <string name="setting_4_1">View client sources</string>
    <string name="setting_4_2">Open Source in Github</string>
    <string name="submit">Submit</string>
    <string name="setting_api_key_hint">Enter Docomo API Key</string>
    <string name="api_key_unavailable">No API key available. Please enter in the setting screen.</string>
    <string name="setting_5_1">How to use application</string>
    <string name="setting_5_2">Open Guide</string>
</resources>
