<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_drawer_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_drawer_story"
            android:checkable="true"
            android:icon="@drawable/ic_heart_black_24dp"
            android:title="@string/story_title" />

        <item
            android:id="@+id/menu_drawer_preset"
            android:checkable="true"
            android:icon="@drawable/ic_toolbox_black_24dp"
            android:title="@string/preset_title" />

        <item
            android:id="@+id/menu_drawer_play"
            android:checkable="true"
            android:icon="@drawable/ic_play_circle_black_24dp"
            android:title="@string/play_title" />

        <item
            android:id="@+id/menu_drawer_import"
            android:checkable="true"
            android:icon="@drawable/ic_swap_vertical_black_24dp"
            android:title="@string/import_title" />
    </group>
</menu>