<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_details_play"
        android:title="@string/menu_details_play"
        android:icon="@drawable/ic_play_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_details_save"
        android:title="Save"
        android:icon="@drawable/ic_download_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_details_top_order"
        android:title="@string/menu_details_order"
        android:icon="@drawable/ic_swap_vertical_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_details_remove"
        android:title="@string/menu_details_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"/>

</menu>