<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/main_details_voice_title"
            android:textColor="@color/modal_sheet_icon_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/addVoice"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:tint="@color/modal_sheet_icon_color"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_plus_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/addBreak"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/addHistory"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_history_black_24dp"
            android:tint="@color/modal_sheet_icon_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addBreak"
            app:layout_constraintTop_toTopOf="@+id/addVoice"/>

        <ImageView
            android:id="@+id/addBreak"
            android:layout_width="48dp"
            android:tint="@color/modal_sheet_icon_color"
            android:layout_height="48dp"
            android:src="@drawable/baseline_free_breakfast_black_24"
            app:layout_constraintEnd_toStartOf="@+id/addHistory"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addVoice"
            app:layout_constraintTop_toTopOf="@+id/addVoice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/main_details_voice_add_voice"
            android:textColor="@color/modal_sheet_icon_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addVoice"
            app:layout_constraintStart_toStartOf="@+id/addVoice"
            app:layout_constraintTop_toBottomOf="@+id/addVoice" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/main_details_voice_add_break"
            android:textColor="@color/modal_sheet_icon_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addBreak"
            app:layout_constraintStart_toStartOf="@+id/addBreak"
            app:layout_constraintTop_toBottomOf="@+id/addBreak" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/main_details_voice_add_history"
            android:textColor="@color/modal_sheet_icon_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addHistory"
            app:layout_constraintStart_toStartOf="@+id/addHistory"
            app:layout_constraintTop_toBottomOf="@+id/addHistory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>